--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -22,8 +22,7 @@
                 </ul>
                 <h3>Menu Kepakaran</h3>
                 <ul>
-                <li><a href="#"><i class="fas fa-credit-card"></i>Bidang Kepakaran</a></li>
-                <li><a href="/"><i class="fas fa-table"></i>Minat Penelitian</a></li>
+                <li><a href="{% url 'add_kepakaran' %}"><i class="fas fa-credit-card"></i>Bidang Kepakaran</a></li>
                 </ul>
                 <h3>List Form</h3>
                 <ul>
