--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -146,7 +146,7 @@
                                 </a>
                                 <div class="dropdown-menu">
                                 
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
+                                    <a href="/" class="dropdown-item">Direktori Alumni</a>
                                 </div>
                             </div>
 
@@ -162,7 +162,7 @@
                                     <span class="dropdown-toggle">Kerja Sama</span>
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
+                                    <a href="/" class="dropdown-item">Our Features</a>
                                   
                                 </div>
                             </div>
@@ -171,11 +171,10 @@
                                     <span class="dropdown-toggle">Karya Ilmiah</span>
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a href="feature.html" class="dropdown-item">Our Features</a>
-                                    <a href="team.html" class="dropdown-item">Our team</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="FAQ.html" class="dropdown-item">FAQs</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
+                                    <a href="feature.html" class="dropdown-item">Jurnal</a>
+                                    <a href="team.html" class="dropdown-item">Pengabdian</a>
+                                    <a href="testimonial.html" class="dropdown-item">Penelitian dan PKM</a>
+                   
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
