--- a/static/dashboard/styles.css
+++ b/static/dashboard/styles.css
@@ -126,7 +126,7 @@ body {
 
 .header-right i {
     margin-right: 10px;
-    color: #fff;
+    color: #b9b9b9;
 }
 
 .btn-add {
@@ -533,6 +533,34 @@ body {
     background-color: #005f56;
 }
 
+.input-group textarea {
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    resize: vertical;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.input-group textarea:focus {
+    border-color: #007bff;
+    box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
+    outline: none;
+}
+
+.input-group textarea::placeholder {
+    color: #aaa;
+    font-style: italic;
+}
+
+.input-group textarea:disabled {
+    background-color: #f5f5f5;
+    border-color: #e0e0e0;
+    color: #999;
+    cursor: not-allowed;
+}
 
 .form-container {
     width: 100%;
@@ -871,4 +899,46 @@ input[type="date"]:focus {
   margin: 20px auto;
   text-decoration: none;
   
+}
+
+
+
+.checkbox-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.checkbox-item {
+    position: relative;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.checkbox-item input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    cursor: pointer;
+}
+
+.checkbox-item label {
+    display: block;
+    padding: 10px 15px;
+    background-color: #f9f9f9;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.checkbox-item input[type="checkbox"]:checked + label {
+    background-color: #0f4229;
+    color: white;
+    border: 1px solid #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 123, 255, 0.2);
+}
+
+.checkbox-item input[type="checkbox"] + label:hover {
+    background-color: #e9e9e9;
+    border-color: #ccc;
 }
