--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -49,13 +49,42 @@
                 <input type="file" id="profile_picture" name="image">
             </div>
             <div class="input-group">
+                <label for="address">Alamat:</label>
+                <input type="text" id="address" name="address" value="{{ user.address }}" required>
+            </div>
+            <div class="input-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" value="{{ user.email }}" required>
             </div>
+
+            <div class="input-group">
+                <label for="bio">Bio:</label>
+                <textarea id="bio" name="bio">{{ user.bio }}</textarea>
+            </div>
+
+
+
             <div class="input-group">
                 <label for="phone_number">Nomor Telepon:</label>
                 <input type="text" id="phone_number" name="phone_number" value="{{ user.phone_number }}" required>
             </div>
+            <div class="input-group">
+                <label for="scopus_id">Scopus ID:</label>
+                <input type="text" id="scopus_id" name="scopus_id" value="{{ user.scopus_id }}">
+            </div>
+            <div class="input-group">
+                <label for="sinta">Sinta:</label>
+                <input type="text" id="sinta" name="sinta" value="{{ user.sinta }}">
+            </div>
+            <div class="input-group">
+                <label for="google_scholar">Google Scholar:</label>
+                <input type="text" id="google_scholar" name="google_scholar" value="{{ user.google_scholar }}">
+            </div>
+            <div class="input-group">
+                <label for="linkedin">Linkedin:</label>
+                <input type="text" id="linkedin" name="linkedin" value="{{ user.linkedin }}">
+            </div>
+
             <div class="input-group">
                 <button type="submit">Simpan Perubahan</button>
             </div>
