--- a/static/codex/css/style.css
+++ b/static/codex/css/style.css
@@ -667,6 +667,8 @@
 
 .team .team-item .team-img img {
     transition: 0.5s;
+    height: 400px;
+    object-fit: cover;
 }
 
 .team .team-item:hover .team-img img {
@@ -897,4 +899,132 @@
 
 .text-left {
     text-align: left;
+}
+
+
+.program-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+}
+
+.program-card {
+    display: flex;
+    align-items: center;
+    background-color: #0f4229;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s;
+    width: 280px;
+}
+
+.program-card:hover {
+    transform: translateY(-5px);
+}
+
+.program-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 100%;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.program-details {
+    padding: 15px;
+}
+
+.program-name {
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.program-members {
+    color: #f1f1f1;
+    font-size: 14px;
+}
+
+/* Responsive design for mobile devices */
+@media (max-width: 1189px) {
+    .program-list {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .program-card {
+        width: 100%;
+    }
+
+    .program-name {
+        font-size: 16px;
+    }
+
+    .program-members {
+        font-size: 12px;
+    }
+}
+
+
+
+/* Card container styling */
+.program-card-tag {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s;
+    padding: 15px;
+    margin: 1px 0;
+}
+
+.program-card-tag:hover {
+    transform: translateY(-5px);
+}
+
+/* Details section styling */
+.program-details-tag {
+    flex: 1;
+
+}
+
+.program-name-tag {
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 1px;
+    display: block;
+}
+
+.program-members-tag {
+    color: #777;
+    font-size: 14px;
+}
+
+/* Responsive design for mobile devices */
+@media (max-width: 600px) {
+    .program-card-tag {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+    }
+
+    .program-name-tag {
+        font-size: 16px;
+    }
+
+    .program-members-tag {
+        font-size: 12px;
+    }
 }
