--- a/templates/dashboard/bidang_kepakaran.html
+++ b/templates/dashboard/bidang_kepakaran.html
@@ -37,6 +37,17 @@
     </div>
 </div>        
             <!-- Minat Penelitian -->
+           
+
+           
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="{{ form.program_studi.id_for_label }}">Kategori Penelitian</label>
+                    {{ form.program_studi }}
+                </div>
+            </div>
+            
         
         
             <button type="submit" class="btn btn-primary">Simpan</button>
