--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -23,6 +23,7 @@
                 <h3>Menu Kepakaran</h3>
                 <ul>
                 <li><a href="{% url 'add_kepakaran' %}"><i class="fas fa-credit-card"></i>Bidang Kepakaran</a></li>
+                <li><a href="{% url 'add_peminatan' %}"><i class="fas fa-credit-card"></i>Minat Penelitian</a></li>
                 </ul>
                 <h3>List Form</h3>
                 <ul>
