--- a/templates/kepakaran/detail_pakar.html
+++ b/templates/kepakaran/detail_pakar.html
@@ -98,33 +98,26 @@
                     </div>
                 </div>
                 <!-- About End -->
-                
-
-                {% if tags %}
-        <ul>
-            {% for tag in tags %}
-                <li>{{ tag.name }}</li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>Belum ada minat penelitian yang ditambahkan.</p>
-    {% endif %}
-
-
-                    <div class="container bg-white py-5">
-                        <div class="row px-3">
-                            <div class="col-12">
-                                <h2 class="title position-relative pb-2 mb-4">Minat Penelitian</h2>
-                            </div>
-                            <div class="col-12">
+        
+                <div class="container bg-white py-5">
+                    <div class="row px-3">
+                        <div class="col-12">
+                            <h2 class="title position-relative pb-2 mb-4">Minat Penelitian</h2>
+                        </div>
+                        <div class="col-12">
+                            {% if tags %}
                                 <div class="border-left border-primary pt-2 pl-4 ml-2">
-                                  
-                                    {{ pakar.minat_penelitian }}
-    
+                                    {% for tag in tags %}
+                                        <a href="{% url 'users_by_tag' tag.slug %}">{{ tag.name }}{% if not forloop.last %}, {% endif %}</a>
+                                    {% endfor %}
                                 </div>
-                            </div>
+                            {% else %}
+                                <p>Belum ada minat penelitian yang ditambahkan.</p>
+                            {% endif %}
                         </div>
                     </div>
+                </div>
+                
 
             
                 <!-- Education Start -->
