--- a/templates/kepakaran/users_by_tag.html
+++ b/templates/kepakaran/users_by_tag.html
@@ -1,4 +1,5 @@
 
+
 {% extends 'home/base.html' %}
 {% block title %}Kepakaran {{ bidang.nama_bidang }} {% endblock %}
 
@@ -14,17 +15,17 @@
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Kepakaran FEB UNM</h4>
-                    <h1 class="display-4 mb-4">{{ bidang.nama_bidang }}</h1>
+                    <h1 class="display-4 mb-4">{{ tag.name }}</h1>
                     <!-- <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
                     </p> -->
                 </div>
                 <div class="row g-4">
 
-                    {% for user in users %}
+                    {% for pakar in users %}
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="{{ user.image.url }}" class="img-fluid rounded-top w-100" alt="">
+                                <img src="{{ pakar.user.image.url }}" class="img-fluid rounded-top w-100" alt="">
                                 <!-- <div class="team-icon">
                                     <a class="btn btn-primary btn-sm-square rounded-pill mb-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-primary btn-sm-square rounded-pill mb-2" href=""><i class="fab fa-twitter"></i></a>
@@ -33,17 +34,20 @@
                                 </div> -->
                             </div>
                             <div class="team-title p-4">
-                                <a href="{% url 'detail_pakar' slug=user.username %}"><h5 style="color: #fff;" class="mb-0">{{ user.first_name }} {{ user.last_name }}</h5></a>
-                                <p class="mb-0"></p>
+                                <a href="{% url 'detail_pakar' slug=pakar.user.username %}"><h5 style="color: #fff;" class="mb-0">{{ pakar.user.first_name }} {{ pakar.user.last_name }}</h5></a>
+                                <!-- <p class="mb-0">username:  {{ pakar.user.username }}</p> -->
                             </div>
                         </div>
                     </div>
                     {% endfor %}
-                    
-                    
                 </div>
             </div>
         </div>
         <!-- Team End -->
 
 {% endblock %}
+
+
+
+
+
