--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -369,7 +369,7 @@
         <div class="container-fluid copyright py-4">
             <div class="container">
                 <div class="row g-4 align-items-center">
-                    <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>HermantoXYZ</a>, All right reserved.</span>
+                    <span class="text-body"><a href="https://padinusantara.com" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>PADINUSANTARA</a>, All right reserved.</span>
                 </div>
             </div>
         </div>
