--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -129,14 +129,15 @@
                                     <span class="dropdown-toggle">Progam Studi</span>
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a href="/" class="dropdown-item">Ekonomi Pembangunan (S1)</a>
-                                    <a href="/" class="dropdown-item">Manajemen (S1)</a>
-                                    <a href="/" class="dropdown-item">Bisnis Digital (S1)</a>
-                                    <a href="/" class="dropdown-item">Pendidikan Ekonomi (S1)</a>
-                                    <a href="/" class="dropdown-item">Pendidikan Akuntansi (S1)</a>
-                                    <a href="/" class="dropdown-item">Akuntansi (S1)</a>
-                                    <a href="/" class="dropdown-item">Kewirausahaan (S1)</a>
-                                  
+                                    <a href="/" class="dropdown-item">Pendidikan Ekonomi S1</a>
+                                    <a href="/" class="dropdown-item">Pendidikan Akuntansi S1</a>
+                                    <a href="/" class="dropdown-item">Manajemen S1</a>
+                                    <a href="/" class="dropdown-item">Ekonomi Pembangunan S1</a>   
+                                    <a href="/" class="dropdown-item">Akuntansi S1</a>
+                                    <a href="/" class="dropdown-item">Kewirausahaan S1</a>     
+                                    <a href="/" class="dropdown-item">Bisnis Digital S1</a>
+                                    <a href="/" class="dropdown-item">Akuntansi Terapan D4</a>
+                                                            
                                 </div>
                             </div>
 
