--- a/static/codex/css/style.css
+++ b/static/codex/css/style.css
@@ -554,7 +554,7 @@
     left: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background: var(--bs-primary);
+    background: var(--bs-yellow);
     transition: 0.5s;
     z-index: 1;
 }
