--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -198,6 +198,44 @@
                     </p>
                 </div>
                 <div class="row g-4 justify-content-center">
+                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="service-item">
+                            <div class="service-img">
+                                <!-- <img src="/media/img/blog-3.png" class="img-fluid rounded-top w-100" alt=""> -->
+                                <div class="service-icon p-3">
+                                    <i class="fa fa-car fa-2x"></i>
+                                </div>
+                            </div>
+                            <div class="service-content p-4">
+                                <div class="service-content-inner">
+                                    <a href="#" class="d-inline-block h5 mb-3">Pendidikan Ekonomi (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
+                               
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="service-item">
+                            <div class="service-img">
+                             
+                                <div class="service-icon p-3">
+                                    <i class="fa fa-home fa-2x"></i>
+                                </div>
+                            </div>
+                            <div class="service-content p-4">
+                                <div class="service-content-inner">
+                                    <a href="#" class="d-inline-block h5 mb-3">Pendidikan Akuntansi (S1)</a>
+                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
+                                 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
@@ -210,7 +248,7 @@
                                 <div class="service-content-inner">
                                     <a href="#" class="d-inline-block h5 mb-3"> Manajemen (S1)</a>
                                     <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -227,28 +265,12 @@
                                 <div class="service-content-inner">
                                     <a href="#" class="d-inline-block h5 mb-3">Ekonomi Pembangunan (S1)</a>
                                     <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
+                                  
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="service-item">
-                            <div class="service-img">
-                                <!-- <img src="/media/img/blog-3.png" class="img-fluid rounded-top w-100" alt=""> -->
-                                <div class="service-icon p-3">
-                                    <i class="fa fa-car fa-2x"></i>
-                                </div>
-                            </div>
-                            <div class="service-content p-4">
-                                <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h5 mb-3">Pendidikan Ekonomi (S1)</a>
-                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="service-item">
                             <div class="service-img">
@@ -261,11 +283,13 @@
                                 <div class="service-content-inner">
                                     <a href="#" class="d-inline-block h5 mb-3">Akuntansi (S1)</a>
                                     <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
+                                  
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                   
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="service-item">
                             <div class="service-img">
@@ -278,11 +302,12 @@
                                 <div class="service-content-inner">
                                     <a href="#" class="d-inline-block h5 mb-3">Kewirausahaan (S1)</a>
                                     <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
+                                   
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="service-item">
                             <div class="service-img">
@@ -295,11 +320,15 @@
                                 <div class="service-content-inner">
                                     <a href="#" class="d-inline-block h5 mb-3">Bisnis Digital (S1)</a>
                                     <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
+                                   
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
+                    
+
+
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="service-item">
                             <div class="service-img">
@@ -310,30 +339,14 @@
                             </div>
                             <div class="service-content p-4">
                                 <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h5 mb-3">Akuntansi (D3)</a>
+                                    <a href="#" class="d-inline-block h5 mb-3">Akuntansi Terapan (D4)</a>
                                     <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
+                              
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="service-item">
-                            <div class="service-img">
-                             
-                                <div class="service-icon p-3">
-                                    <i class="fa fa-home fa-2x"></i>
-                                </div>
-                            </div>
-                            <div class="service-content p-4">
-                                <div class="service-content-inner">
-                                    <a href="#" class="d-inline-block h5 mb-3">Pendidikan Akuntansi (S1)</a>
-                                    <!-- <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p> -->
-                                    <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  
                     <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
                         <a class="btn btn-primary rounded-pill py-3 px-5" href="#">More Services</a>
                     </div>
