--- a/templates/dashboard/bidang_peminatan.html
+++ b/templates/dashboard/bidang_peminatan.html
@@ -8,13 +8,10 @@
 <div class="main-content">
     <header class="main-header">
         <div class="breadcrumb">
-            <span>Pages / Bidang Kepakaran</span>
-            <h2>Kepakaran</h2>
+            <span>Pages / Minat</span>
+            <h2>Minat Penelitian</h2>
         </div>
-        <div class="header-right">
-            <a href="{% url 'add_pengabdian' %}" class="btn-add"><i class="fas fa-plus"></i> Bidang Kepakaran</a>
-            <a href="#" class="bar-icon"><i class="fas fa-bars sidebar-toggle"></i></a>
-        </div>
+       
     </header>
 
     <div class="container-ku">
