--- a/templates/dashboard/dosen.html
+++ b/templates/dashboard/dosen.html
@@ -23,7 +23,7 @@
                     <div class="info-card">
                         <div class="info-content">
                             <p class="info-title">Total Pengabdian</p>
-                            <h2>$53,000 <span class="info-change positive"></span></h2>
+                            <h2>{{total_pengabdian}}</h2>
                         </div>
                         <div class="info-icon">
                             <i class="fas fa-wallet"></i>
@@ -32,7 +32,7 @@
                     <div class="info-card">
                         <div class="info-content">
                             <p class="info-title">Total Penelitian</p>
-                            <h2>2,300 <span class="info-change positive">+3%</span></h2>
+                            <h2>{{total_penelitian}}</h2>
                         </div>
                         <div class="info-icon">
                             <i class="fas fa-globe"></i>
@@ -40,8 +40,8 @@
                     </div>
                     <div class="info-card">
                         <div class="info-content">
-                            <p class="info-title">Buku</p>
-                            <h2>+3,020 <span class="info-change negative">-14%</span></h2>
+                            <p class="info-title">Total Buku</p>
+                            <h2>{{total_buku}}</h2>
                         </div>
                         <div class="info-icon">
                             <i class="fas fa-users"></i>
@@ -49,8 +49,8 @@
                     </div>
                     <div class="info-card">
                         <div class="info-content">
-                            <p class="info-title">Halaman Diakses</p>
-                            <h2>$173,000 <span class="info-change positive">+8%</span></h2>
+                            <p class="info-title">Total News</p>
+                            <h2>{{total_news}}</h2>
                         </div>
                         <div class="info-icon">
                             <i class="fas fa-shopping-cart"></i>
@@ -58,29 +58,7 @@
                     </div>
                 </div>
 
-                <div class="container">
-                    <div class="card">
-                        <div class="card-content">
-                            <p class="tag">Information us</p>
-                            <h2>Get started</h2>
-                            <p>Wealth creation is a revolutionary recent positive-sum game. It is all about who takes the opportunity first.</p>
-                            <a href="#" class="read-more">Read more →</a>
-                        </div>
-                        <div class="card-logo">
-                            <img src="/" alt="chakra">
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-content">
-                            <h2>Work with the rockets</h2>
-                            <p>Wealth creation is a revolutionary recent positive-sum game. It is all about who takes the opportunity first.</p>
-                            <a href="#" class="read-more">Read more →</a>
-                        </div>
-                        <div class="card-image">
-                            <img src="/" alt="Work with the rockets">
-                        </div>
-                    </div>
-                </div>
+             
 
         
                 
