--- a/templates/dashboard/list_book.html
+++ b/templates/dashboard/list_book.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Add Buku</span>
-            <h2>Buku</h2>
+            <h2>{{jumlah_buku}} Buku</h2>
         </div>
         <div class="header-right">
             <a href="{% url 'add_book' %}" class="btn-add"><i class="fas fa-plus"></i> Add Buku</a>
