--- a/templates/dashboard/list_news.html
+++ b/templates/dashboard/list_news.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Add News</span>
-            <h2>News</h2>
+            <h2>{{jumlah_news}} News</h2>
         </div>
         <div class="header-right">
             <a href="{% url 'add_news' %}" class="btn-add"><i class="fas fa-plus"></i> Add News</a>
