--- a/templates/dashboard/list_pendidikan.html
+++ b/templates/dashboard/list_pendidikan.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Add Pendidikan</span>
-            <h2>Pendidikan</h2>
+            <h2>{{ jumlah_pendidikan }} Pendidikan</h2>
         </div>
         <div class="header-right">
             <a href="{% url 'add_pendidikan' %}" class="btn-add"><i class="fas fa-plus"></i> Add Pendidikan</a>
