--- a/templates/dashboard/list_penelitian.html
+++ b/templates/dashboard/list_penelitian.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Add Penelitian</span>
-            <h2>Penelitian</h2>
+            <h2>{{jumlah_penelitian}} Penelitian</h2>
         </div>
         <div class="header-right">
             <a href="{% url 'add_penelitian' %}" class="btn-add"><i class="fas fa-plus"></i> Add Penelitian</a>
