--- a/templates/dashboard/list_pengabdian.html
+++ b/templates/dashboard/list_pengabdian.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Add Pengabdian</span>
-            <h2>Pengabdian</h2>
+            <h2>{{ total_pengabdian  }} Pengabdian</h2>
         </div>
         <div class="header-right">
             <a href="{% url 'add_pengabdian' %}" class="btn-add"><i class="fas fa-plus"></i> Add Pengabdian</a>
