--- a/templates/dashboard/list_organisasi.html
+++ b/templates/dashboard/list_organisasi.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="breadcrumb">
             <span>Pages / Add Organisasi</span>
-            <h2>Organisasi</h2>
+            <h2>{{jumlah_organisasi}} Organisasi</h2>
         </div>
         <div class="header-right">
             <a href="{% url 'add_organisasi' %}" class="btn-add"><i class="fas fa-plus"></i> Add Organisasi</a>
