--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -580,7 +580,12 @@ height: 1px;
 }
 
 
-
+.container-search {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+    background-color: #f8f9fa;
+}
 /* List Product */
 .container {
     width: 80%;
@@ -780,6 +785,7 @@ font-size: 12px;
     color: white;
     font-family: Archivo, sans-serif;
     font-size: 16px;
+    text-decoration: none;
 }
 
 .p-service-bidang {
@@ -919,7 +925,7 @@ font-size: 12px;
     justify-content: center;
     gap: 20px;
     text-decoration: none;
-    background-color: #fff;
+
 }
 
 .program-name-tag {
@@ -937,7 +943,16 @@ font-size: 12px;
 }
 
 
+.container-search {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+}
 
+.container-search img {
+    width: 150px;
+}
 /* Bidang Kepakaran Section */
 
 .container {
@@ -945,7 +960,9 @@ font-size: 12px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+    border-radius: 20px;
 }
+
 
 header h2 {
     color: #006400;
@@ -1024,6 +1041,7 @@ header p {
     width: 90%;
     margin: 0 auto;
     padding-top: 20px;
+    border-radius: 20px;
 }
 
 .header {
@@ -1361,4 +1379,76 @@ header p {
     background: #a5a5a5;
     color: #fff;
     border-radius: 20px;
+}
+
+.p-details {
+    font-size: 12px; /* Ukuran font */
+    color: #333; /* Warna teks */
+    margin: 10px 0; /* Margin atas dan bawah */
+    padding: 5px; /* Padding */
+    background-color: #f9f9f9; /* Warna latar belakang */
+    border-radius: 5px; /* Sudut melengkung */
+    border: 1px solid #ddd; /* Garis tepi */
+    text-align: center; /* Teks di tengah */
+}
+
+
+.search-input {
+    display: flex;
+    width: 70%;
+    color: #fff;
+    margin: 20px auto;
+    align-items: center;
+}
+
+
+
+
+.search-input input {
+    flex: 1;
+    background-color: #b1b1b1;
+    padding: 15px;
+    box-shadow: 0 2px 70px rgba(0, 0, 0, 0.1);
+    border: none;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 1em;
+}
+
+.search-input button {
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+    background-color: #f8f9fa;
+    color: #000000;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+.search-input button i {
+    font-size: 1.2em;
+}
+
+
+.search-input input::placeholder {
+    color: #ffffff; /* Change this to your desired placeholder text color */
+}
+
+
+@media (max-width: 600px) {
+    .overlay {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    .search-input input {
+        font-size: 0.9em;
+    }
+
+    .search-input button {
+        font-size: 0.9em;
+    }
 }
