--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -28,17 +28,17 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <ul class="nav-menu">
+            <!-- <ul class="nav-menu">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Program Studi</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Karya Ilmiah</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Bantuan</a></li>
              
               
-            </ul>
+            </ul> -->
             <div class="auth-buttons">
-                <a href="#" class="btn login">Login</a>
-                <a href="#" class="btn register">Register</a>
+                <a href="{% url 'login' %}" class="btn login">Login</a>
+                <a href="{% url 'register' %}" class="btn register">Register</a>
             </div>
         </div>
     </nav>
@@ -69,7 +69,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
+                 
                 </ul>
             </div>
             <div class="footer-column">
@@ -84,10 +84,10 @@
             <div class="footer-column">
                 <h3>Contact</h3>
                 <ul>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#">Register</a></li>
-                    <li><a href="#">Forgot Password</a></li>
-                    <li><a href="#">Update Password</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <li><a href="{% url 'password_reset' %}">Forgot Password</a></li>
+                  
                 </ul>
             </div>
         </div>
